@@ -66,7 +66,7 @@ public class PieceObject {
                 validMoves.add(colNames[x+i] + " " + (y+i+1));
                 if(ChessBoard.chessBoard[7-y-i][x+i].getPiece() != null){
                     if(!isOpponentPiece(x+i, 7-y-i)){
-                        validMoves.removeLast();
+                        validMoves.remove(validMoves.size() - 1);
                     }
                     break;
                 }
@@ -79,7 +79,7 @@ public class PieceObject {
                 validMoves.add(colNames[x+i] + " " + (y-i+1));
                 if(ChessBoard.chessBoard[7-y+i][x+i].getPiece() != null){
                     if(!isOpponentPiece(x+i, 7-y+i)){
-                        validMoves.removeLast();
+                        validMoves.remove(validMoves.size() - 1);
                     }
                     break;
                 }
@@ -92,7 +92,7 @@ public class PieceObject {
                 validMoves.add(colNames[x-i] + " " + (y+i+1));
                 if(ChessBoard.chessBoard[7-y-i][x-i].getPiece() != null) {
                     if(!isOpponentPiece(x-i, 7-y-i)){
-                        validMoves.removeLast();
+                        validMoves.remove(validMoves.size() - 1);
                     }
                     break;
                 }
@@ -105,7 +105,7 @@ public class PieceObject {
                 validMoves.add(colNames[x-i] + " " + (y-i+1));
                 if(ChessBoard.chessBoard[7-y+i][x-i].getPiece() != null){
                     if(!isOpponentPiece(x-i, 7-y+i)){
-                        validMoves.removeLast();
+                        validMoves.remove(validMoves.size() - 1);
                     }
                     break;
                 }
@@ -126,7 +126,7 @@ public class PieceObject {
                 validMoves.add(colNames[x+i] + " " + y);
                 if(ChessBoard.chessBoard[8-y][x+i].getPiece() != null){
                     if (!isOpponentPiece(x+i, 8-y)){
-                        validMoves.removeLast();
+                        validMoves.remove(validMoves.size() - 1);
                     }
                     break;
                 }
@@ -139,7 +139,7 @@ public class PieceObject {
                 validMoves.add(colNames[x-i] + " " + y);
                 if(ChessBoard.chessBoard[8-y][x-i].getPiece() != null) {
                     if (!isOpponentPiece(x-i, 8-y)){
-                        validMoves.removeLast();
+                        validMoves.remove(validMoves.size() - 1);
                     }
                     break;
                 }
@@ -153,7 +153,7 @@ public class PieceObject {
                 validMoves.add(colNames[x] + " " + (y+i));
                 if (ChessBoard.chessBoard[8-(y+i)][x].getPiece() != null) {
                     if (!isOpponentPiece(x, 8-(y+i))){
-                        validMoves.removeLast();
+                        validMoves.remove(validMoves.size() - 1);
                     }
                     break;
                 }
@@ -166,7 +166,7 @@ public class PieceObject {
                 validMoves.add(colNames[x] + " " + (y-i));
                 if (ChessBoard.chessBoard[8-(y-i)][x].getPiece() != null) {
                     if (!isOpponentPiece(x, 8-(y-i))){
-                        validMoves.removeLast();
+                        validMoves.remove(validMoves.size() - 1);
                     }
                     break;
                 }
@@ -261,6 +261,9 @@ public class PieceObject {
     }
 
 
+    public boolean isKingChecked() {
+        return false;
+    }
 
     public static int letterToNumber(char letter) {
         return Character.toLowerCase(letter) - 'a';
